--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                     </svg>
                 </button> 
                 <b>Оставьте свои данные, мы вам перезвоним</b>
-                <form action="">
+                <form action="#">
                     <div class="form-field">
                         <label class="form-label" for="name">Имя</label>
                         <div class="form-field-position">
@@ -434,7 +434,7 @@
             <!-- подписка -->
             <div class="subscription">
                 <b>Подпишитесь на рассылку</b>
-                <form action="">
+                <form action="#">
                     <input type="email" name="email" placeholder="E-mail">
                     <button type="submit"><span>Подписаться</span></button>
                 </form>
