--- a/portfolio.html
+++ b/portfolio.html
@@ -248,7 +248,7 @@
             <!-- подписка -->
             <div class="subscription">
                 <b>Подпишитесь на рассылку</b>
-                <form action="">
+                <form action="#">
                     <input type="email" name="email" placeholder="E-mail">
                     <button type="submit"><span>Подписаться</span></button>
                 </form>
